objects/tffa__Stipulation__c.object
<CustomObject>
    <description>During the application process, the lender makes stipulations of the borrower to ensure that they meet the criteria or profile of the loan agreement. For example, things like “Borrower needs to provide 3 months of income history” or “At the time of closing borrow must present 2 forms of identification” are common stipulations lenders put forth. These stipulations could also be added from credit decisioning system. This is fundamentally a lending concept , but we have designed for it to support any kind of products.

The stipulations can be related to the applicants in context of the product applied or could for the applicant irrespective of the product.</description>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to application object for which current stipulation is raised</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Stipulations</relationshipLabel>
        <relationshipName>Stipulations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <defaultValue>&quot;PRE_APPROVAL&quot;</defaultValue>
        <description>Category of stipulations raised for an application. Possible values are PRE_APPROVAL, POST_APPROVAL and PRE_QUALIFICATION</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. Typically derived from Stipulation Template.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional comments</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether document upload is needed against the current stipulation</description>
        <label>Document required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentSubtype__c</fullName>
        <description>A subset category identified within a larger group of documents. A document subtype provides more specific context for the document.</description>
        <label>Document Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DocumentSubtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DocumentType__c</fullName>
        <description>Allowed document types, EMPLOYMENT, FINANCIALS, IDENTITY, REALESTATE, ADDRESS etc.</description>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationDocumentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsPhysicalCopySubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if physical copies of the required documents are submitted at the branch</description>
        <label>Is physical copy submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display text for the stipulation. Can be text or a RB key, pointing to the text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfDocuments__c</fullName>
        <description>Number of documents uploaded against the current stipulation</description>
        <label>Number of documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to party object for which current stipulation is raised</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Stipulations</relationshipLabel>
        <relationshipName>Stipulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RejectedComments__c</fullName>
        <description>Additional Comments/reasons captured for rejection.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejected comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RejectedReason__c</fullName>
        <description>Reason to reject the stipulation</description>
        <label>Rejected reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationRejectedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RequiredOnApplicationStatus__c</fullName>
        <description>Indicates the condition on which current stipulation is to be made mandatory</description>
        <label>Required on application status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current stipulation is mandatory</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;NEW&quot;</defaultValue>
        <description>Indicates current status of the stipulation raised. Values can be New, Uploaded, Approved, Rejected, Waived</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to submission object for which current stipulation is raised</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Stipulations</relationshipLabel>
        <relationshipName>Stipulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stipulation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Stipulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stipulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>